--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h2>Our Services</h2>
         </div>
         <div class="flexed">
-          <div class="flexed-content text-white bg-primary rounded-3" style="width: 20rem; height: 14rem;">
+          <div class="flexed-content products text-white flex-sm-column flex-lg-row bg-primary rounded-3" style="width: 20rem; height: 14rem;">
               <div class="card-header" id="card-header">Branding</div>
               <div class="card-body">
                 <h5 class="card-title">UI/UX Designs</h5>
@@ -60,7 +60,7 @@
           <div class="service text-primary text-center mt-5 mb-5 ms-auto text-center">
             <h2>Our Products</h2>
         </div>
-        <div class="container products d-flex">
+        <div class="container products d-flex flex-sm-column flex-lg-row">
             <div class="card" style="width: 18rem;">
                 <img src="images/melvin-thambi-VEVigpVmCRI-unsplash 1.jpg" class="card-img-top">
                 <div class="card-body">
