Add figma project

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h2>Our Services</h2>
         </div>
         <div class="flexed">
-          <div class="flexed-content products text-white flex-sm-column flex-lg-row bg-primary rounded-3" style="width: 20rem; height: 14rem;">
+          <div class="flexed-content services text-white flex-sm-column flex-lg-row bg-primary rounded-3" style="width: 20rem; height: 14rem;">
               <div class="card-header" id="card-header">Branding</div>
               <div class="card-body">
                 <h5 class="card-title">UI/UX Designs</h5>
