Add figma project

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
         </div>
       </nav>
-      <div class="d-flex hero-section justify-between">
+      <div class="d-flex flex-lg-row flex-sm-column hero-section justify-between">
         <div class="">
             <div class="hero-text me-5">
               <h5 class="hero-title text-primary mb-3">Bootsrapify</h5>
